--- a/Pages/Contacto.html
+++ b/Pages/Contacto.html
@@ -28,7 +28,7 @@
 
     <!-- titulo -->
     <header class="contacto">
-        <img class="animate__rotateIn" src="../imagenes/logo.jpg" alt="logo guepard">
+        <img class="animate__rotateIn" src="imagenes/logo.jpg" alt="logo guepard">
         <h1 class="animate__fadeInRight">Contactanos</h1>
     </header>
 
@@ -61,10 +61,10 @@
     </form>
 
     <div class="celular">
-        <a href="tel:+543492418983" target="_blank"><img src="../imagenes/celular.png" alt="contacto celular"></a>
-        <a href="https://www.instagram.com/guepard_entrenamiento/" target="_blank"> <img src="../imagenes/instagram.png" alt="instagram"></a>
-        <a href="https://www.facebook.com/Guepardpersonal.trainer.rafaela" target="_blank"> <img src="../imagenes/facebook.png" alt="facebook"></a>
-        <a href="https://www.guepard.ar/" target="_blank"> <img src="../imagenes/android.png" alt="app"></a>
+        <a href="tel:+543492418983" target="_blank"><img src="imagenes/celular.png" alt="contacto celular"></a>
+        <a href="https://www.instagram.com/guepard_entrenamiento/" target="_blank"> <img src="imagenes/instagram.png" alt="instagram"></a>
+        <a href="https://www.facebook.com/Guepardpersonal.trainer.rafaela" target="_blank"> <img src="imagenes/facebook.png" alt="facebook"></a>
+        <a href="https://www.guepard.ar/" target="_blank"> <img src="imagenes/android.png" alt="app"></a>
     </div>
     
     </main>
