--- a/Pages/Horarios.html
+++ b/Pages/Horarios.html
@@ -30,16 +30,16 @@
 
     <header class="times">
         <img class="animate__rotateIn"
-        src="../imagenes/logo.jpg" alt="logo guepard">
+        src="imagenes/logo.jpg" alt="logo guepard">
         <h1 class="animate__fadeInRight"> Horarios y actividades </h1>
     </header>
 
     <!-- informacion -->
 
     <main class="actividad">
-        <img src="../imagenes/horarios.png" alt="horarios y actividades">
+        <img src="imagenes/horarios.png" alt="horarios y actividades">
         <div class="ubi">
-            <img src="../imagenes/destino.png" alt="ubicacion del gimnasio">
+            <img src="imagenes/destino.png" alt="ubicacion del gimnasio">
             <p>Av. Brasil 435, Rafaela</p>  
         </div>
              
