--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <!-- Contenido del encabezado -->
     <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
-          <img src="../imagenes/logo.jpg" alt="logo guepard">
+          <img src="imagenes/logo.jpg" alt="logo guepard">
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -57,7 +57,7 @@
 
     <main class="contenedor">
         <h1 class="animate__animated animate__bounceInLeft"> ¿Quienes somos? </h1>
-        <img src="../imagenes/GUEPARD actualizado.png" alt="logo guepard">
+        <img src="Imagenes/GUEPARD-actualizado.png" alt="logo guepard">
         <div>
             <p>Somos Agu y Gigi y juntos somos Guepard Entrenamiento. Este emprendimiento deportivo empezo en 2016 y tenemos como objetivo ayudarte a lograr tus objetivos personales, en otras palabras, nuestro objetivo y lograr sacar tu mejor versión.</p>
         </div>
