--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 
     <!-- CSS -->
     <link rel="stylesheet" href="CSS/styles.css">
+    <link rel="stylesheet" href="SCSS/Contenedores/_index.scss">
 
     <title>Guepard Entrenamiento</title>
 </head>
