--- a/Pages/Equipo.html
+++ b/Pages/Equipo.html
@@ -36,7 +36,7 @@
     <!-- titulos -->
 
     <header class="staff">
-        <img class="animate__rotateIn" src="../imagenes/logo.jpg" alt="logo guepard">
+        <img class="animate__rotateIn" src="../Imagenes/logo.jpg" alt="logo guepard">
         <h1 class="animate__fadeInRight"> Equipo de <span>Guepard Entrenamiento</span> </h1>
     </header>
 
@@ -46,7 +46,7 @@
         <h2>
             Agustin Pecantet y Gigi Eier 
         </h2>    
-        <img src="../imagenes/agu-gigi.jpg" alt="Agu y Gigi">
+        <img src="../Imagenes/agu-gigi.jpg" alt="Agu y Gigi">
         <p>Somos Agustin Pecantet y Gisela Eier. Agustin es nuestro profesor principal, el que dicta casi todas las clases y Gisela es nuestra Community Manager</p>
         </div>
 
@@ -54,7 +54,7 @@
         <h2>
             Mateo Quiroga            
         </h2>    
-        <img src="../imagenes/matu-quiroga.jpg" alt="Mateo Quiroga">
+        <img src="../Imagenes/matu-quiroga.jpg" alt="Mateo Quiroga">
         <p>Mateo Quiroga es nuestro profesor de Guepard kits. Él es quien nos ayuda en todas las clases a despejar dudas. No dudes en consultarle ante una duda.</p>
         </div>
 
