--- a/Pages/Noticias.html
+++ b/Pages/Noticias.html
@@ -27,7 +27,7 @@
     <!-- Contenido del encabezado -->
 
     <header class="noticia">
-        <img class="animate__rotateIn" src="../imagenes/logo.jpg" alt="logo guepard">
+        <img class="animate__rotateIn" src="../Imagenes/logo.jpg" alt="logo guepard">
         <h1 class="animate__fadeInRight"> Ultimas noticias en el mundo Guepard </h1>
                
     </header>
@@ -35,7 +35,7 @@
     <!-- informacion de la nota-->
 
     <main class="nota">        
-        <img src="../imagenes/carrera-rafaela.jpg" alt="Corredores en Rafaela">
+        <img src="../Imagenes/carrera-rafaela.jpg" alt="Corredores en Rafaela">
         <div>
             <p>20/10/2022. En el dia de la fecha se corrio la tan esperada carrera de nuestra ciudad, donde tuvimos la participacion de algunos de nuestros atletas. Fueron 20 guepardos los que participaron de la carrera y los resultados fueron increibles. Queremos hacer llegar nuestras maximas felicitacion al todo el equipo por este gran logro.</p>
         </div>          
