--- a/index.html
+++ b/index.html
@@ -35,16 +35,16 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item" >
-                <a class="nav-link active" aria-current="page" href="pages/Equipo.html">Equipo</a>
+                <a class="nav-link active" aria-current="page" href="Pages/Equipo.html">Equipo</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" href="pages/Noticias.html">Noticias</a>
+                <a class="nav-link active" href="Pages/Noticias.html">Noticias</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" href="pages/Horarios.html">Horarios<a>
+                <a class="nav-link active" href="Pages/Horarios.html">Horarios<a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" href="pages/Contacto.html">Contacto</a>
+                <a class="nav-link active" href="Pages/Contacto.html">Contacto</a>
               </li>
             </ul>
           </div>
