--- a/Pages/Contacto.html
+++ b/Pages/Contacto.html
@@ -28,7 +28,7 @@
 
     <!-- titulo -->
     <header class="contacto">
-        <img class="animate__rotateIn" src="../imagenes/logo.jpg" alt="logo guepard">
+        <img class="animate__rotateIn" src="../Imagenes/logo.jpg" alt="logo guepard">
         <h1 class="animate__fadeInRight">Contactanos</h1>
     </header>
 
