--- a/Pages/Horarios.html
+++ b/Pages/Horarios.html
@@ -29,8 +29,7 @@
     <!-- contenido del titulo -->
 
     <header class="times">
-        <img class="animate__rotateIn"
-        src="../Imagenes/logo.jpg" alt="logo guepard">
+        <img class="animate__rotateIn" src="../Imagenes/logo.jpg" alt="logo guepard">
         <h1 class="animate__fadeInRight"> Horarios y actividades </h1>
     </header>
 
