--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 <body>
 
     <!-- Contenido del encabezado -->
+    <header>
     <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
           <img src="Imagenes/logo.jpg" alt="logo guepard">
@@ -50,7 +51,7 @@
           </div>
         </div>
       </nav>
-
+    </header>
     
 
     <!-- contenido principal -->
