--- a/Pages/Noticias.html
+++ b/Pages/Noticias.html
@@ -26,10 +26,31 @@
 <body>
     <!-- Contenido del encabezado -->
 
-    <header class="noticia">
-        <img class="animate__rotateIn" src="../Imagenes/logo.jpg" alt="logo guepard">
-        <h1 class="animate__fadeInRight"> Ultimas noticias en el mundo Guepard </h1>
-               
+    <header>
+        <nav class="navbar navbar-expand-lg">
+            <div class="container-fluid">
+              <img src="../Imagenes/logo.jpg" alt="logo guepard">
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                  <li class="nav-item" >
+                    <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link active" href="Equipo.html">Equipo</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link active" href="Horarios.html">Horarios<a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link active" href="Contacto.html">Contacto</a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </nav>
     </header>
 
     <!-- informacion de la nota-->
@@ -41,11 +62,13 @@
         </div>          
     </main>
 
-    <!-- pie de pagina -->
-
-    <footer class="inicio">
-        <a href="../index.html"> Ir a home</a>
-    </footer>
+  <!-- contenido pie de pagina -->
+  <footer class="final">
+      <h2> Derechos Reservados </h2>
+      <div>
+          <p>Rafaela, Santa Fe</p>
+      </div>
+  </footer>
 
     
 </body>
