--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             <p>Rafaela, Santa Fe</p>
         </div>
         <div class="contac">
-            <a href="pages/Horarios.html">Horarios</a>
+            <a href="Pages/Horarios.html">Horarios</a>
         </div>
     </footer>
 
